# coder

./: .env.example  .gitignore  .pre-commit-config.yaml  .semgrep.yml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  README_EN.md  SECURITY.md  Taskfile.yml  docker-compose.yaml  pyproject.toml
.github/workflows/: build-and-push.yml  quality.yml
ci/: frontend.Dockerfile  python.Dockerfile
data/memory/: .gitignore  MEMORY.md
docs/decisions/: README.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css  main.tsx  types.ts
frontend/src/components/: AgentTerminal.tsx  ChatMarkdown.tsx  Dashboard.tsx  ErrorBoundary.tsx  ProposalCard.tsx  Statistics.test.tsx  Statistics.tsx  StatusBar.tsx  SupervisorChat.test.tsx  SupervisorChat.tsx  TaskCard.test.tsx  TaskCard.tsx
frontend/src/hooks/: useGlobalEvents.ts  useProposals.ts  useSupervisorChat.test.tsx  useSupervisorChat.ts  useTaskStream.ts  useWebSocket.ts
frontend/src/lib/: utils.ts
orchestrator/: _persistence.py  adr.py  agent_mailbox.py  agent_runner.py  alertmanager_webhook.py  comm_tools.py  compaction.py  config.py  constants.py  dependency_manager.py  epic_coordinator.py  escalation.py  event_bus.py  github_client.py  heartbeat.py  k8s_client.py  llm_utils.py  main.py  metrics.py  needs_info_monitor.py  orchestrator_agent.py  orchestrator_tools.py  post_merge_verifier.py  pr_monitor.py  pre_merge_reviewer.py  preflight_checker.py  prompt_builder.py  proposal_manager.py  recovery.py  repo_resolver.py  sqlite_storage.py  stats_collector.py  stats_models.py  storage.py  supervisor.py  supervisor_chat.py  supervisor_memory.py  supervisor_prompt_builder.py  supervisor_tools.py  task_dispatcher.py  (+7 more)
orchestrator/migrations/: 0001_initial.sql  0002_proposals_recovery.sql  0003_epic_states.sql  0004_pr_tracking.sql  0005_needs_info.sql  0006_proposal_columns.py  0007_recovery_cost.py  0008_events.sql  0009_recovery_already_implemented.py  0010_session_id.py  0011_deferred_tasks.sql  0012_pr_tracking_merge_conflict.py  0013_task_runs_session_id.py  0014_environment_config.sql  0015_pr_verified.py  0016_pr_tracking_retries.py  0017_pr_lifecycle_cancelled.py  0018_pr_tracking_head_sha.py  0019_pr_lifecycle_unique_constraint.py
prompts/: code_quality_gate.md  critic_agent.md  plan_agent.md  simplify_agent.md  supervisor_workflow.md  workflow.md
tests/: conftest.py  test_adr.py  test_agent_mailbox.py  test_agent_runner.py  test_alertmanager_webhook.py  test_auto_merge.py  test_comm_tools.py  test_compaction.py  test_config.py  test_dependency_manager.py  test_environment_config.py  test_epic_coordinator.py  test_epic_decomposition.py  test_epic_events.py  test_epic_persistence.py  test_escalation.py  test_event_bus.py  test_github_client.py  test_heartbeat.py  test_json_logging.py  test_k8s_client.py  test_llm_utils.py  test_main.py  test_metrics.py  test_migration_version_collision.py  test_needs_info_monitor.py  test_needs_info_persistence.py  test_orchestrator_agent.py  test_orchestrator_tools.py  test_post_merge_verifier.py  test_pr_monitor.py  test_pr_persistence.py  test_pre_merge_reviewer.py  test_preflight_checker.py  test_prompt_builder.py  test_proposal_persistence.py  test_reconcile_orphaned.py  test_recovery.py  test_repo_resolver.py  test_session_lock_cleanup.py  (+14 more)
tests/integration/: test_orchestrator_flow.py
