[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zvenoai-coder"
version = "0.3.0"
description = "ZvenoAI Coder — orchestrator for automated Yandex Tracker task execution with web dashboard"
license = "Apache-2.0"
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "requests>=2.32",
    "claude-agent-sdk>=0.1.35",
    "fastapi>=0.128",
    "uvicorn[standard]>=0.40",
    "websockets>=16.0",
    "aiosqlite>=0.20",
    "python-json-logger>=3.1",
]

[project.optional-dependencies]
memory = [
    "openai>=1.30",
]
k8s = [
    "kubernetes>=31.0",
]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.3",
    "pytest-cov>=7.0",
    "pytest-timeout>=2.3",
    "httpx>=0.28",
    "ruff>=0.15.0",
    "mypy>=1.19",
    "types-requests>=2.32",
    "pre-commit>=4.5",
    "openai>=1.30",
    "kubernetes>=31.0",
]

[project.urls]
Homepage = "https://github.com/zvenoai/coder"
Repository = "https://github.com/zvenoai/coder"
Issues = "https://github.com/zvenoai/coder/issues"
Changelog = "https://github.com/zvenoai/coder/releases"

[tool.setuptools.packages.find]
include = ["orchestrator*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
timeout = 30
markers = [
    "integration: integration tests using real components with mocked external APIs",
]

# Ruff configuration
[tool.ruff]
target-version = "py312"
line-length = 120
exclude = [".venv", "dist", "build", "__pycache__", "frontend"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "C4", "PIE", "RET", "SIM", "PTH", "PL", "RUF", "ASYNC"]
ignore = [
    "E501",    # line too long (handled by formatter)
    "PLR0913", # too many arguments
    "PLR0912", # too many branches
    "PLR0915", # too many statements
    "PLR0911", # too many return statements
    "PLR2004", # magic values
    "PLW0603", # global statement
    "SIM105",  # contextlib.suppress
    "SIM117",  # nested with statements
    "PTH123",  # Path.open()
    "RET503",  # missing explicit return
    "RUF001",  # ambiguous unicode (Cyrillic in strings)
    "RUF006",  # store asyncio.create_task reference
    "PLC0415", # import not at top (acceptable in tests)
    "F841",    # unused variable
    "PIE810",  # call startswith once
    "C408",    # unnecessary dict call
    "N806",    # variable should be lowercase (acceptable in tests)
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["PLR2004"]
"orchestrator/web.py" = ["B008"]  # FastAPI Depends() pattern is correct

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# Mypy configuration
[tool.mypy]
python_version = "3.12"
warn_return_any = false  # too strict for existing code
warn_unused_configs = true
disallow_untyped_defs = false  # will enable gradually
disallow_incomplete_defs = false  # will enable gradually
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false  # too noisy initially
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "claude_agent_sdk.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disable_error_code = ["method-assign", "arg-type", "attr-defined"]

[[tool.mypy.overrides]]
module = "orchestrator.web"
disable_error_code = ["arg-type"]

[[tool.mypy.overrides]]
module = [
    "pytest",
    "fastapi.*",
    "uvicorn.*",
    "pydantic",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "openai.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "kubernetes.*",
]
ignore_missing_imports = true

# Coverage configuration
[tool.coverage.run]
source = ["orchestrator"]
omit = ["tests/*", "*/__pycache__/*", ".venv/*"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
